force-app/main/default/objects/PEP_Patient__c/PEP_Patient__c.object-meta.xml
<CustomObject>
    <label>Patient</label>
    <nameField>
        <displayFormat>PEP-{000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>