force-app/main/default/objects/PEP_Patient__c/fields/Caregiver_Consent__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Consent__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field for storing whether the patient agrees to their caregiver to be contacted by advocate or not. This consent is included on the edit profile page from the patient portal.</description>
    <label>Caregiver Consent</label>
    <type>Checkbox</type>
</CustomField>