force-app/main/default/objects/PEP_Patient__c/fields/Caregiver_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Last_Name__c</fullName>
    <label>Caregiver Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>