force-app/main/default/objects/PEP_Patient__c/fields/Caregiver_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Relationship__c</fullName>
    <label>Caregiver Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Partner / Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>