force-app/main/default/objects/PEP_Patient__c/fields/Caregiver_Telephone_1__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Telephone_1__c</fullName>
    <label>Caregiver Telephone</label>
    <type>Phone</type>
</CustomField>