force-app/main/default/objects/PEP_Patient__c/fields/Condition_Details__c.field-meta.xml
<CustomField>
    <fullName>Condition_Details__c</fullName>
    <label>Condition Details</label>
    <type>TextArea</type>
</CustomField>