force-app/main/default/objects/PEP_Patient__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Condition(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Acute Coronary Syndrome (ACS)</fullName>
            </value>
            <value>
                <fullName>Congestive Heart Failure (CHF)</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Hyperlipidemia</fullName>
            </value>
            <value>
                <fullName>Adult Type II Diabetes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>