force-app/main/default/objects/PEP_Patient__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Stores the Date of birth of the patient.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>