force-app/main/default/objects/PEP_Patient__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Stores the Email Address of the patient.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>