force-app/main/default/objects/PEP_Patient__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Stores the First Name of the patient. Created as a part of A360 application.</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>