force-app/main/default/objects/PEP_Patient__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Stores the Gender of the patient.</description>
    <label>Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
                <default>true</default>
                <label>Prefer not to answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>