force-app/main/default/objects/PEP_Patient__c/fields/Is_Patient_Uninsured__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Uninsured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store the value of Is Patient Uninsured?</description>
    <label>Is Patient Uninsured?</label>
    <type>Checkbox</type>
</CustomField>