force-app/main/default/objects/PEP_Patient__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Stores the Last Name of the patient.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>