force-app/main/default/objects/PEP_Patient__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>Stores the Middle Name of the patient. Created as a part of A360 application.</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>