force-app/main/default/objects/PEP_Patient__c/fields/Preferred_Language_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_if_Other__c</fullName>
    <description>This field stores the language name when the Preferred Language picklist value is other.</description>
    <label>Preferred Language (if Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>