force-app/main/default/objects/PEP_Patient__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected address is not related to this patient.</errorMessage>
        <filterItems>
            <field>PEP_Patient_Address__c.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PEP_Patient_Address__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>