force-app/main/default/objects/PEP_Patient__c/fields/Primary_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_2__c</fullName>
    <formula>Primary_Address__r.Street_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Address Line 2</label>
    <type>Text</type>
</CustomField>