force-app/main/default/objects/PEP_Patient__c/fields/Primary_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Line_3__c</fullName>
    <formula>Primary_Address__r.Street_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Address Line 3</label>
    <type>Text</type>
</CustomField>