force-app/main/default/objects/PEP_Patient__c/fields/Primary_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_City__c</fullName>
    <formula>Primary_Address__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary City</label>
    <type>Text</type>
</CustomField>