force-app/main/default/objects/PEP_Patient__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
                <default>true</default>
                <label>Patient</label>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>