force-app/main/default/objects/PEP_Patient__c/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <formula>TEXT(Primary_Address__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Country</label>
    <type>Text</type>
</CustomField>