force-app/main/default/objects/PEP_Patient__c/fields/Primary_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Postal_Code__c</fullName>
    <formula>Primary_Address__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Postal Code</label>
    <type>Text</type>
</CustomField>