force-app/main/default/objects/PEP_Patient__c/fields/Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_State__c</fullName>
    <formula>TEXT(Primary_Address__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary State</label>
    <type>Text</type>
</CustomField>