force-app/main/default/objects/PEP_Patient__c/fields/Telephone_1__c.field-meta.xml
<CustomField>
    <fullName>Telephone_1__c</fullName>
    <description>Stores the Telephone 1 Number of the Patient.</description>
    <label>Telephone 1</label>
    <type>Phone</type>
</CustomField>