force-app/main/default/objects/PEP_Patient__c/fields/Telephone_2__c.field-meta.xml
<CustomField>
    <fullName>Telephone_2__c</fullName>
    <description>Stores the Telephone 2 Number of the Patient.</description>
    <label>Telephone 2</label>
    <type>Phone</type>
</CustomField>