force-app/main/default/objects/PEP_Patient__c/listViews/All_Patients_with_Names_SURESH.listView-meta.xml
<ListView>
    <fullName>All_Patients_with_Names_SURESH</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Email_Address__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Patients Created Today</label>
</ListView>