force-app/main/default/objects/PEP_Patient__c/listViews/My_Patients.listView-meta.xml
<ListView>
    <fullName>My_Patients</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Gender__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Caregiver_First_Name__c</columns>
    <columns>Caregiver_Relationship__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Patients</label>
</ListView>